# stryke-kafka

./: Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: discover.stk  group_lag.stk  produce_one.stk  tail_topic.stk  topics.stk
lib/: Kafka.stk
src/: admin.rs  common.rs  consume.rs  lib.rs  main.rs  produce.rs
t/: test_kafka.stk  test_stryke_kafka_surface.stk
tests/: contract_cli_round4.rs
